--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+    <div class="grid">
     <header class="header">
 
     </header>
@@ -32,5 +33,6 @@
     <footer class="footer">
         
     </footer>
+    </div>
 </body>
 </html>
