--- a/index.html
+++ b/index.html
@@ -38,10 +38,18 @@
     </aside>
 
     <footer class="footer">
-        <h3>Секция футера 1</h3>
-        <h3>Секция футера 2</h3>
-        <h3>Секция футера 3</h3>
-        <h3>Секция футера 4</h3>
+        <section class="section1">
+            <h3>Секция футера 1</h3>
+        </section>
+        <section class="section2">
+            <h3>Секция футера 2</h3>
+        </section>
+        <section class="section3">
+            <h3>Секция футера 3</h3>
+        </section>
+        <section class="section4">
+            <h3>Секция футера 4</h3>
+        </section>
     </footer>
     </div>
 </body>
