Hid extra sections

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <h3>[Ещё 3]</h3>
             </article>
         </section>
-        <address class="address">
+        <!-- <address class="address">
 
         </address>
         <figure class="figure">
 
-        </figure>
+        </figure> -->
     </main>
 
     <aside class="aside">
