--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
     </main>
 
     <aside class="aside">
-       <h3>Боковая область</h3>
+       <h3>[Боковая область]</h3>
     </aside>
 
     <footer class="footer">
         <section class="section1">
-            <h3>Секция футера 1</h3>
+            <h3>[Секция футера 1]</h3>
         </section>
         <section class="section2">
-            <h3>Секция футера 2</h3>
+            <h3>[Секция футера 2]</h3>
         </section>
         <section class="section3">
-            <h3>Секция футера 3</h3>
+            <h3>[Секция футера 3]</h3>
         </section>
         <section class="section4">
-            <h3>Секция футера 4</h3>
+            <h3>[Секция футера 4]</h3>
         </section>
     </footer>
     </div>
