--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <main class="main">
         <section class="section">
             <h2>[Основная часть]</h2>
-            <article class="article">
+            <article class="article1">
             <h3>[Ещё 1]</h3>
             </article>
-            <article class="article">
+            <article class="article2">
             <h3>[Ещё 2]</h3>
             </article>
-            <article class="article">
+            <article class="article3">
             <h3>[Ещё 3]</h3>
             </article>
         </section>
