Added article for "Боковая область"

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <h3>[Ещё 3]</h3>
             </article>
         </section>
+        <article >
+            <h2>[Боковая область]</h2>
+        </article>
         <!-- <address class="address">
 
         </address>
