Commented aside in html

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         </figure> -->
     </main>
 
+    <!--
     <aside class="aside">
        <h3>[Боковая область]</h3>
-    </aside>
+    </aside> -->
 
     <footer class="footer">
         <section class="section1">
