Added grid for article 12

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <main class="main">
         <section class="section">
+            <div class="article12">
             <h2>[Основная часть]</h2>
             <article class="article1">
             <h3>[Ещё 1]</h3>
@@ -21,6 +22,7 @@
             <article class="article2">
             <h3>[Ещё 2]</h3>
             </article>
+            </div>
             <article class="article3">
             <h3>[Ещё 3]</h3>
             </article>
