Added class for article

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3>[Ещё 3]</h3>
             </article>
         </section>
-        <article >
+        <article class="article">
             <h2>[Боковая область]</h2>
         </article>
         <!-- <address class="address">
