--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <main class="main">
         <section class="section">
+            <div class="grid2">
             <h2>[Основная часть]</h2>
             <div class="article12">
             <article class="article1">
@@ -26,6 +27,7 @@
             <article class="article3">
             <h3>[Ещё 3]</h3>
             </article>
+            </div>
         </section>
         <article class="article">
             <h2>[Боковая область]</h2>
